--- a/scripts/BUILD.bazel
+++ b/scripts/BUILD.bazel
@@ -1,4 +1,16 @@
 load("@//bazel/astore:defs.bzl", "astore_upload")
+load("@//bazel:bats.bzl", "bats_test")
+
+sh_library(
+    name = "gee-lib",
+    srcs = [ "gee" ],
+)
+
+bats_test(
+    name = "gee-bats",
+    srcs = ["gee.bats"],
+    deps = [":gee-lib"],
+)
 
 filegroup(
     name = "gee-script",
