lib/kflags: add ability to provide command line flags from a map.
This change introduces a new Augmenter, the MapAugmenter, which allows
to provide flag defaults from a simple map, provided at the agumenter
creation time.

The MapAgumenter can be configured to use one or more EnvManglers
(now renamed VarMangler) to allow to compute a different key from
a flag name. For example, by using a Camel mangler, for a flag named
"network-timeout", the key "NetworkTimeout" is looked up in the flag.

Additionally, this PR restructures manglers to be more genereically
useful, and introduces a couple new ones.

No functional change to the codebase, this just adds new library
functions that will be used in an upcoming PR.

--- a/lib/kflags/BUILD.bazel
+++ b/lib/kflags/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
         "defaults.go",
         "env.go",
         "flags.go",
+        "map.go",
     ],
     importpath = "github.com/enfabrica/enkit/lib/kflags",
     visibility = ["//visibility:public"],
@@ -19,7 +20,10 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["flags_test.go"],
+    srcs = [
+        "env_test.go",
+        "flags_test.go",
+    ],
     embed = [":go_default_library"],
     deps = ["@com_github_stretchr_testify//assert:go_default_library"],
 )
