lib/config: add ability to delete key.
Background:
So far, the config library allowed to store a config by key, and
retrieve it.

In this PR:
- add ability to delete a key.
- improve comments and documentation.
- add corresponding tests.

Additionally:
- Write() function in the homedir store has been improved to guarantee
  atomicity on POSIX filesystems.

--- a/lib/config/BUILD.bazel
+++ b/lib/config/BUILD.bazel
@@ -9,7 +9,10 @@ go_library(
     ],
     importpath = "github.com/enfabrica/enkit/lib/config",
     visibility = ["//visibility:public"],
-    deps = ["//lib/config/marshal:go_default_library"],
+    deps = [
+        "//lib/config/marshal:go_default_library",
+        "//lib/multierror:go_default_library",
+    ],
 )
 
 go_test(
