--- a/enkit/BUILD.bazel
+++ b/enkit/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "//lib/client/commands:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
         "//lib/srand:go_default_library",
+        "//proxy/enfuse:go_default_library",
         "//proxy/ptunnel/commands:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
     ],
