--- a/proxy/enfuse/BUILD.bazel
+++ b/proxy/enfuse/BUILD.bazel
@@ -12,11 +12,15 @@ go_library(
     importpath = "github.com/enfabrica/enkit/proxy/enfuse",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/kcerts:go_default_library",
+        "//lib/srand:go_default_library",
         "//proxy/enfuse/rpc:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@org_bazil_fuse//:go_default_library",
         "@org_bazil_fuse//fs:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//credentials:go_default_library",
+        "@org_golang_google_grpc//metadata:go_default_library",
     ],
 )
 
@@ -30,7 +34,6 @@ go_test(
         ":go_default_library",
         "//lib/knetwork:go_default_library",
         "//lib/srand:go_default_library",
-        "//proxy/enfuse/rpc:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@org_bazil_fuse//:go_default_library",
         "@org_bazil_fuse//fs/fstestutil:go_default_library",
