--- a/enkit/BUILD.bazel
+++ b/enkit/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//astore/client/commands:go_default_library",
+        "//lib/bazel/commands:go_default_library",
         "//lib/client:go_default_library",
         "//lib/client/commands:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
