--- a/license_manager/server/BUILD.bazel
+++ b/license_manager/server/BUILD.bazel
@@ -6,11 +6,10 @@ go_library(
     importpath = "github.com/enfabrica/enkit/license_manager/server",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/server:go_default_library",
         "//license_manager/proto:go_default_library",
         "//license_manager/service:go_default_library",
-        "@com_github_golang_glog//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
-        "@org_golang_google_grpc//reflection:go_default_library",
     ],
 )
 
