--- a/license_manager/service/BUILD.bazel
+++ b/license_manager/service/BUILD.bazel
@@ -18,6 +18,7 @@ go_test(
     embed = [":go_default_library"],
     deps = [
         "//license_manager/proto:go_default_library",
+        "@com_github_stretchr_testify//assert:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
     ],
