--- a/license_manager/service/BUILD.bazel
+++ b/license_manager/service/BUILD.bazel
@@ -2,7 +2,10 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = ["service.go"],
+    srcs = [
+        "license.go",
+        "service.go",
+    ],
     importpath = "github.com/enfabrica/enkit/license_manager/service",
     visibility = ["//visibility:public"],
     deps = [
