--- a/lib/knetwork/kdns/BUILD.bazel
+++ b/lib/knetwork/kdns/BUILD.bazel
@@ -11,7 +11,9 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/knetwork/kdns",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/goroutine:go_default_library",
         "//lib/logger:go_default_library",
+        "//lib/multierror:go_default_library",
         "@com_github_miekg_dns//:go_default_library",
     ],
 )
