--- a/lib/bazel/BUILD.bazel
+++ b/lib/bazel/BUILD.bazel
@@ -3,6 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = [
+        "affected_targets.go",
         "options.go",
         "query.go",
         "workspace.go",
@@ -12,6 +13,7 @@ go_library(
     deps = [
         "//lib/bazel/proto:build_go_proto",
         "//lib/proto/delimited:go_default_library",
+        "@com_github_bazelbuild_buildtools//wspace:go_default_library",
         "@org_golang_google_protobuf//proto:go_default_library",
     ],
 )
