--- a/lib/bazel/proto/BUILD.bazel
+++ b/lib/bazel/proto/BUILD.bazel
@@ -23,3 +23,15 @@ go_proto_library(
     proto = ":build_proto",
     visibility = ["//lib/bazel:__subpackages__"],
 )
+
+proto_library(
+    name = "workspace_log_proto",
+    srcs = ["workspace_log.proto"],
+)
+
+go_proto_library(
+    name = "workspace_log_go_proto",
+    importpath = "github.com/enfabrica/enkit/lib/bazel/proto",
+    proto = ":workspace_log_proto",
+    visibility = ["//lib/bazel:__subpackages__"],
+)
