flextape client: Move to separate binary
The original license manager client has two code paths: one that talks
to the old server, and one that talks to the new server. The old server
is no longer in use.

This change copies the code path that talks to the new server into a new
binary under //flextape/client/flextape_client. This will allow us to
delete the entire //manager subtree in a future change.

This change prepares us to add signal handling required for INFRA-418
more cleanly.

Jira: INFRA-418

--- a/flextape/client/BUILD.bazel
+++ b/flextape/client/BUILD.bazel
@@ -4,7 +4,11 @@ go_library(
     name = "go_default_library",
     srcs = ["client.go"],
     importpath = "github.com/enfabrica/enkit/flextape/client",
-    visibility = ["//manager/client:__pkg__"],
+    visibility = [
+        "//flextape/client/flextape_client:__pkg__",
+        # TODO(scott): Drop this when deleting the code
+        "//manager/client:__pkg__",
+    ],
     deps = ["//flextape/proto:go_default_library"],
 )
 
