--- a/infra/postsubmit/proto/BUILD.bazel
+++ b/infra/postsubmit/proto/BUILD.bazel
@@ -1,13 +1,23 @@
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@rules_proto//proto:defs.bzl", "proto_library")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
 proto_library(
     name = "postsubmit_proto",
     srcs = ["postsubmit.proto"],
+    visibility = ["//visibility:private"],
 )
 
 go_proto_library(
     name = "postsubmit_go_proto",
     importpath = "github.com/enfabrica/enkit/infra/postsubmit/proto",
     proto = ":postsubmit_proto",
+    visibility = ["//visibility:private"],
+)
+
+go_library(
+    name = "go_default_library",
+    embed = [":postsubmit_go_proto"],
+    importpath = "github.com/enfabrica/enkit/infra/postsubmit/proto",
+    visibility = ["//visibility:private"],
 )
