--- a/proxy/enproxy/BUILD.bazel
+++ b/proxy/enproxy/BUILD.bazel
@@ -11,6 +11,8 @@ go_library(
         "//lib/khttp:go_default_library",
         "//lib/logger:go_default_library",
         "//lib/oauth:go_default_library",
+        "//proxy/amux:go_default_library",
+        "//proxy/amux/amuxie:go_default_library",
         "//proxy/httpp:go_default_library",
         "//proxy/nasshp:go_default_library",
         "//proxy/utils:go_default_library",
