bestie: Add initial BES Endpoint service metrics
Defined the following metrics for monitoring the BES Endpoint
service through Prometheus and Grafana:

- total number of Bazel builds seen
- count of each Bazel event, tagged by event ID

Also replaced the regex with a much simpler check for any test
output file ending with ".metrics.pb" to be processed for
test result metrics.

Tested: 'bazel run //bestie/server:bestie' to run BES Endpoint
locally on port 6433. Ran a 'bazel test' client command multiple
times, with --bes_backend=grpc://localhost:6433, to generate a
variety of Bazel events through the endpoint. Set up a local
Grafana dashboard to observe Prometheus metrics being updated.

Jira: INFRA-438

--- a/bestie/server/BUILD.bazel
+++ b/bestie/server/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     name = "go_default_library",
     srcs = [
         "main.go",
+        "service.go",
         "testresult.go",
     ],
     importpath = "github.com/enfabrica/enkit/bestie/server",
@@ -15,6 +16,7 @@ go_library(
         "//lib/server:go_default_library",
         "//third_party/bazel/src/main/java/com/google/devtools/build/lib/buildeventstream/proto:go_default_library",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
+        "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
         "@go_googleapis//google/devtools/build/v1:build_go_proto",
         "@org_golang_google_grpc//:go_default_library",
