bes: Add library to fetch BES logs from BuildBuddy
This change adds a simple BuildBuddy HTTP-based client with a method
that can fetch all BES events for a particular invocation ID.

`assertProtoEqual` test helper method moves out of flextape tests to the
`testutil` package so it can be shared by package `bes`'s tests.

Jira: INFRA-468

--- a/lib/testutil/BUILD.bazel
+++ b/lib/testutil/BUILD.bazel
@@ -3,8 +3,15 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     testonly = True,
-    srcs = ["fs.go"],
+    srcs = [
+        "assert.go",
+        "fs.go",
+    ],
     importpath = "github.com/enfabrica/enkit/lib/testutil",
     visibility = ["//visibility:public"],
-    deps = ["@com_github_psanford_memfs//:go_default_library"],
+    deps = [
+        "@com_github_google_go_cmp//cmp:go_default_library",
+        "@com_github_psanford_memfs//:go_default_library",
+        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
+    ],
 )
