--- a/flextape/service/BUILD.bazel
+++ b/flextape/service/BUILD.bazel
@@ -26,13 +26,12 @@ go_test(
     deps = [
         "//flextape/proto:go_default_library",
         "//lib/errdiff:go_default_library",
-        "@com_github_golang_protobuf//proto:go_default_library",
+        "//lib/testutil:go_default_library",
         "@com_github_google_go_cmp//cmp:go_default_library",
         "@com_github_prashantv_gostub//:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
-        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
         "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
     ],
 )
