--- a/lib/token/BUILD.bazel
+++ b/lib/token/BUILD.bazel
@@ -29,5 +29,8 @@ go_test(
         "token_test.go",
     ],
     embed = [":go_default_library"],
-    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
+    deps = [
+        "//lib/config/marshal:go_default_library",
+        "@com_github_stretchr_testify//assert:go_default_library",
+    ],
 )
