bazel/bats: configure it in a way so it is usable from other repos.
Background:
bats is a unit testing framework for shell scripts.
When using @// syntax to refer to a file, it always refers to the
current workspace. Eg, if the defs.bzl is invoked from a repository
by a namespace called internal, @// will refer to "internal".

In this change:
- use @enkit - so the BUILD.*.bazel files can be used from other
  repositories without copying them.
- import bats_file library, so we have the full set of tools.

--- a/bazel/dependencies/BUILD.bats.bazel
+++ b/bazel/dependencies/BUILD.bats.bazel
@@ -13,6 +13,7 @@ sh_binary(
         ":bats_lib",
         "@bats_assert//:bats_assert_lib",
         "@bats_support//:bats_support_lib",
+        "@bats_file//:bats_file_lib",
     ],
     visibility = ["//visibility:public"],
 )
