enkit outputs: Start tunnel when necessary
This change adds a few helper functions:
* A function to determine if a particular host requires a tunnel for
  communication
* A function to start and background a tunnel to a particular host
  listening on a port

These helper functions are used to allow `enkit outputs` subcommands to
determine:
* if a tunnel should be started to communicate with buildbarn
* if so, start a tunnel and replace the destination port with the local
port the tunnel is currently listening on

Tested: `enkit outputs mount` gets past tunnel initialization to a
BuildBuddy error (no invocation ID supplied)

Jira: INFRA-507

--- a/enkit/outputs/BUILD.bazel
+++ b/enkit/outputs/BUILD.bazel
@@ -12,6 +12,8 @@ go_library(
         "//lib/kbuildbarn/exec:go_default_library",
         "//lib/logger:go_default_library",
         "//lib/multierror:go_default_library",
+        "//proxy/ptunnel:go_default_library",
+        "//proxy/ptunnel/exec:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
     ],
 )
