--- a/bestie/server/BUILD.bazel
+++ b/bestie/server/BUILD.bazel
@@ -5,6 +5,7 @@ load("@io_bazel_rules_docker//container:container.bzl", "container_image", "cont
 go_library(
     name = "go_default_library",
     srcs = [
+        "bigquery_metrics.go",
         "main.go",
         "service.go",
         "testresult.go",
@@ -13,12 +14,16 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//bestie/proto:go_default_library",
+        "//lib/kbuildbarn:go_default_library",
+        "//lib/multierror:go_default_library",
         "//lib/server:go_default_library",
         "//third_party/bazel/src/main/java/com/google/devtools/build/lib/buildeventstream/proto:build_event_stream_go_proto",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
+        "@com_google_cloud_go_bigquery//:go_default_library",
         "@go_googleapis//google/devtools/build/v1:build_go_proto",
+        "@org_golang_google_api//googleapi:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_protobuf//encoding/prototext:go_default_library",
         "@org_golang_google_protobuf//proto:go_default_library",
