--- a/enkit/outputs/BUILD.bazel
+++ b/enkit/outputs/BUILD.bazel
@@ -6,8 +6,10 @@ go_library(
     importpath = "github.com/enfabrica/enkit/enkit/outputs",
     visibility = ["//visibility:public"],
     deps = [
+        "//faketree/exec:go_default_library",
         "//lib/bes:go_default_library",
         "//lib/client:go_default_library",
+        "//lib/karchive:go_default_library",
         "//lib/kbuildbarn:go_default_library",
         "//lib/kbuildbarn/exec:go_default_library",
         "//lib/logger:go_default_library",
