--- a/lib/kbuildbarn/exec/BUILD.bazel
+++ b/lib/kbuildbarn/exec/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//lib/logger:go_default_library",
+        "//lib/retry:go_default_library",
         "@com_github_mitchellh_go_ps//:go_default_library",
     ],
 )
