--- a/bestie/proto/BUILD.bazel
+++ b/bestie/proto/BUILD.bazel
@@ -1,3 +1,4 @@
+load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
 load("@rules_proto//proto:defs.bzl", "proto_library")
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
@@ -27,5 +28,11 @@ go_library(
         ":bestie_go_proto"
     ],
     importpath = "github.com/enfabrica/enkit/bestie/proto",
+    visibility = ["//visibility:public"],
+)
+
+py_proto_library(
+    name = "bestie_py_proto",
+    srcs = ["test_metrics.proto"],
     visibility = ["//visibility:public"],
 )
