--- a/bestie/proto/BUILD.bazel
+++ b/bestie/proto/BUILD.bazel
@@ -13,6 +13,12 @@ proto_library(
     visibility = ["//visibility:public"],
 )
 
+cc_proto_library(
+    name = "bestie_cc_proto",
+    deps = [":test_metrics_proto"],
+    visibility = ["//visibility:public"],
+)
+
 go_proto_library(
     name = "bestie_go_proto",
     importpath = "github.com/enfabrica/enkit/bestie/proto",
