BUILD.bats.bazel: add libs subtree.

--- a/bazel/dependencies/BUILD.bats.bazel
+++ b/bazel/dependencies/BUILD.bats.bazel
@@ -3,7 +3,7 @@
 
 sh_library(
     name = "bats_lib",
-    srcs = glob(["libexec/**"]),
+    srcs = glob(["lib/**", "libexec/**"]),
 )
 
 sh_binary(
