enproxy: add basic prometheus metrics and plumbing.
Background on some design decisions:
1) a separate http server is started on a different port just
   to export metrics. This simplifies authentication, https, and
   simplifies the main mux used for proxying and ssh.

2) some objects that need to export metrics are instantiated
   multiple times. This makes it hard to use the simple/default
   globals.

3) some counters already exist in the code, and are used
   internally for the engine to work.

4) some counters are in really hot paths, eg, per read/write
   performed.

The design uses simple per-object counters, paired with
an object implementing the prometheus.Collector() interface
just like recommended in the docs when reading "legacy counters",
counters that already exist in code.

This also allows multiple instances of objects by using
things like prometheus.WrapRegistererWithPrefix().

--- a/proxy/nasshp/BUILD.bazel
+++ b/proxy/nasshp/BUILD.bazel
@@ -5,8 +5,8 @@ go_library(
     srcs = [
         "blocking.go",
         "browser.go",
+        "counters.go",
         "nassh.go",
-        "types.go",
         "window.go",
     ],
     importpath = "github.com/enfabrica/enkit/proxy/nasshp",
@@ -16,7 +16,9 @@ go_library(
         "//lib/logger:go_default_library",
         "//lib/oauth:go_default_library",
         "//lib/token:go_default_library",
+        "//proxy/utils:go_default_library",
         "@com_github_gorilla_websocket//:go_default_library",
+        "@com_github_prometheus_client_golang//prometheus:go_default_library",
     ],
 )
 
