--- a/proxy/enproxy/BUILD.bazel
+++ b/proxy/enproxy/BUILD.bazel
@@ -16,6 +16,8 @@ go_library(
         "//proxy/httpp:go_default_library",
         "//proxy/nasshp:go_default_library",
         "//proxy/utils:go_default_library",
+        "@com_github_prometheus_client_golang//prometheus:go_default_library",
+        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
     ],
 )
 
